--- a/package/templates/contact.html
+++ b/package/templates/contact.html
@@ -5,7 +5,7 @@
 	<p align="justify">WordPsych is still at its fetal period. Your feedback is greatly needed to help us obtain higher quality data and build better predictive models. If you tried it, please email me at sadeghiyeh@u.arizona.edu with your feedback and comments. How does the result seem right to you? If you happened to have a diagnosis, your input is of incalculable value; I highly apprecite it if you share it with me.</p><br><br>
 
 	<h5 align="left">Hashem Sadeghiyeh</h5>
-	<h5 align="left">sadeghiyeh@u.arizona.edu</h5>
+	<h5 align="left">hashem.sadeghiyeh@mg.thedataincubator.com</h5>
 </div>
 
 
