--- a/flask_app/package/templates/how.html
+++ b/flask_app/package/templates/how.html
@@ -1,12 +1,12 @@
 {% extends 'layout.html' %}
 {% block content %}
 
-<div>
+<div></div>
     <p align="justify" style="width:900px; margin-left:5em; font-size:18px">Here we have one billion texts, each associated with one or more
-        labels (a person can belong to more than one group) and the task is to build a 
+        23 labels (a person can belong to more than one group) and the task is to build a 
         <a href="https://en.wikipedia.org/wiki/Machine_learning" target="_blank" rel="noopener noreferrer">  
         machine learning</a> model that learns what kinds of texts belong to which label. If everything goes well, the model should be able to 
-        correctly predict labels of new unlabled texts. This task is a <a href="https://en.wikipedia.org/wiki/Statistical_classification" 
+        correctly predict labels of some new unlabled texts. This task is a <a href="https://en.wikipedia.org/wiki/Statistical_classification" 
         target="_blank" rel="noopener noreferrer">classification task</a> that belongs to the more general category of 
         <a href="https://en.wikipedia.org/wiki/Supervised_learning" target="_blank" rel="noopener noreferrer"> supervised learning</a>. 
         Supervised means that we provided the machine with the correct labels during training (in contrast to an unsupervised task like 
@@ -24,8 +24,6 @@
         Word2vec</a> and <a href="https://en.wikipedia.org/wiki/BERT_(language_model)" target="_blank" rel="noopener noreferrer"> BERT Model</a>.
     </p>
 </div>
-
-<div><br></div>
 
 <div>
     <img src = "{{url_for('static', filename='flowchart.png')}}" width="700" style="vertical-align:middle;margin:0px 180px"/>
