--- a/flask_app/package/templates/how.html
+++ b/flask_app/package/templates/how.html
@@ -2,7 +2,7 @@
 {% block content %}
 
 <div></div>
-    <p align="justify" style="width:900px; margin-left:5em; font-size:18px">Here we have one billion texts, each associated with one or more
+    <p align="justify" style="width:850px; margin-left:6.4em; font-size:18px">Here we have one billion texts, each associated with one or more of 
         23 labels (a person can belong to more than one group) and the task is to build a 
         <a href="https://en.wikipedia.org/wiki/Machine_learning" target="_blank" rel="noopener noreferrer">  
         machine learning</a> model that learns what kinds of texts belong to which label. If everything goes well, the model should be able to 
@@ -26,20 +26,15 @@
 </div>
 
 <div>
-    <img src = "{{url_for('static', filename='flowchart.png')}}" width="700" style="vertical-align:middle;margin:0px 180px"/>
+    <img src = "{{url_for('static', filename='flowchart.png')}}" width="750" style="vertical-align:middle;margin:0px 190px"/>
+    
 </div>
 
-<div><br><br></div>
 
-<div>
-    <p align="justify" style="width:900px; margin-left:5em; font-size:18px">In this Github repository, you can find the implementation 
-        of several classical machine learning classification algorithms (most notably the MultiNomial Naive Bayes) and another classification 
-        algorithm from the deep-learning category: BERT-based neural network implementation. You can also find the codes used to download the 
-        data from reddit and also the Flask codes used to implement the current website:  <a href="https://github.com/hashem20/wordpsych">
-            https://github.com/hashem20/wordpsych</a></p>
+<div><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+	<br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+	<br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
 </div>
-
-<div><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br></div>
 
 {% endblock %}
 
