--- a/flask_app/package/templates/layout.html
+++ b/flask_app/package/templates/layout.html
@@ -36,6 +36,7 @@
               <a class="nav-item nav-link" href={{ url_for('why') }}>Why it matters</a>
               <a class="nav-item nav-link" href={{ url_for('how') }}>How it works</a>
               <a class="nav-item nav-link" href={{ url_for('dataset') }}>The dataset</a>
+              <a class="nav-item nav-link" href={{ url_for('github') }}>Github</a>
               <a class="nav-item nav-link" href={{ url_for('tryit') }}>Try it</a>
             </div>
     
