--- a/flask_app/package/templates/layout.html
+++ b/flask_app/package/templates/layout.html
@@ -1,6 +1,15 @@
 <!DOCTYPE html>
 <html>
+
 <head>
+  <style>
+    .error {
+        color: red;
+    }
+  </style>
+  <script type="text/javascript" src="https://cdn.jsdelivr.net/npm//vega@5"></script>
+  <script type="text/javascript" src="https://cdn.jsdelivr.net/npm//vega-lite@4.17.0"></script>
+  <script type="text/javascript" src="https://cdn.jsdelivr.net/npm//vega-embed@6"></script>
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -34,8 +43,8 @@
             <div class="navbar-nav mr-auto">
               <a class="nav-item nav-link" href={{ url_for('what') }}>What is it</a>
               <a class="nav-item nav-link" href={{ url_for('why') }}>Why it matters</a>
-              <a class="nav-item nav-link" href={{ url_for('how') }}>How it works</a>
               <a class="nav-item nav-link" href={{ url_for('dataset') }}>The dataset</a>
+              <a class="nav-item nav-link" href={{ url_for('how') }}>How it works</a>
               <a class="nav-item nav-link" href={{ url_for('github') }}>Github</a>
               <a class="nav-item nav-link" href={{ url_for('tryit') }}>Try it</a>
             </div>
